--- a/notes/vectorizing_notes.ipynb
+++ b/notes/vectorizing_notes.ipynb
@@ -29,7 +29,7 @@
     "* <ins>Word</ins>: a single word in a document\n",
     "\n",
     "\n",
-    "![General NLP vocab](NLP_general_vocab.png \"Corpus example\")"
+    "![General NLP vocab](supporting_images/NLP_general_vocab.png \"Corpus example\")"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering <a name=\"feature_engineering\"></a>\n",
+    "## Feature Engineering <a class=\"anchor\" id=\"feature_engineering\"></a>\n",
     "\n",
     "Feature Engineering, also known as \"feature extraction\", \"text representation\", or \"text vectorization\" is an integral step that allows us to represent text as numbers (feature vectors). This is required when working on NLP problem as computers can only understand numbers, not text in its raw form. Various approaches are covered below."
    ]
