--- a/notes/vectorizing_notes.ipynb
+++ b/notes/vectorizing_notes.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "## Table of Contents\n",
     "\n",
-    "1. [General Vocabulary](#general_vocabulary)\n",
-    "2. [Feature Engineering](#feature_engineering)\n",
-    "    1. [One Hot Encoding](#ohe)\n",
-    "    2. [Bag of Words](#bow)\n",
-    "    3. [NGrams](#ngrams)\n",
-    "    4. [TF-IDF](#tfidf)\n",
-    "    3. [Word Embeddings](#word_embeddings)\n"
+    "1. [General Vocabulary](#General-Vocabulary)\n",
+    "2. [Feature Engineering](#Feature-Engineering)\n",
+    "    1. [One Hot Encoding](#One-Hot-Encoding-(OHE))\n",
+    "    2. [Bag of Words](#Bag-of-Words-(BoW))\n",
+    "    3. [NGrams](#NGrams)\n",
+    "    4. [TF-IDF](#TF-IDF)\n",
+    "    3. [Word Embeddings](#Word_Embeddings)\n"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## General Vocabulary <a name=\"general_vocabulary\"></a>\n",
+    "## General Vocabulary\n",
     "\n",
     "* <ins>Corpus</ins>: All words in a dataset\n",
     "* <ins>Vocabulary</ins>: Unique words in a dataset\n",
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### One Hot Encoding (OHE) <a name=\"ohe\"></a>"
+    "### One Hot Encoding (OHE)"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bag of Words (BoW) <a name=\"bow\"></a>"
+    "### Bag of Words (BoW)"
    ]
   },
   {
