Additions to vectorization notes

--- a/notes/vectorizing_notes.ipynb
+++ b/notes/vectorizing_notes.ipynb
@@ -5,22 +5,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of Contents\n",
-    "\n",
-    "1. [General Vocabulary](#General-Vocabulary)\n",
-    "2. [Feature Engineering](#Feature-Engineering)\n",
-    "    1. [One Hot Encoding](#One-Hot-Encoding-(OHE))\n",
-    "    2. [Bag of Words](#Bag-of-Words-(BoW))\n",
-    "    3. [NGrams](#NGrams)\n",
-    "    4. [TF-IDF](#TF-IDF)\n",
-    "    3. [Word Embeddings](#Word_Embeddings)\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## General Vocabulary\n",
     "\n",
     "* <ins>Corpus</ins>: All words in a dataset\n",
@@ -28,8 +12,215 @@
     "* <ins>Document</ins>: a single unique record in a dataset\n",
     "* <ins>Word</ins>: a single word in a document\n",
     "\n",
+    "To better exemplify these concepts, let's use the following example dataset below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import itertools\n",
     "\n",
-    "![General NLP vocab](supporting_images/NLP_general_vocab.png \"Corpus example\")"
+    "# \n",
+    "data = {\n",
+    "    'Documents': [\n",
+    "        'I love machine learning and data science',\n",
+    "        'Data science is fascinating and challenging',\n",
+    "        'Machine learning is a subset of data science',\n",
+    "        'I enjoy learning new things in data science',\n",
+    "        'This is an example document, it may have a lot of symbols like (! @ # $ or %)'\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 1: Convert the corpus (data dictionary) into a DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Documents</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I love machine learning and data science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Data science is fascinating and challenging</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Machine learning is a subset of data science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I enjoy learning new things in data science</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>This is an example document, it may have a lot...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           Documents\n",
+       "0           I love machine learning and data science\n",
+       "1        Data science is fascinating and challenging\n",
+       "2       Machine learning is a subset of data science\n",
+       "3        I enjoy learning new things in data science\n",
+       "4  This is an example document, it may have a lot..."
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 2: Pre-process each document (row of the dataframe) to make it lowercase and split it into individual words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     [i, love, machine, learning, and, data, science]\n",
+      "1    [data, science, is, fascinating, and, challeng...\n",
+      "2    [machine, learning, is, a, subset, of, data, s...\n",
+      "3    [i, enjoy, learning, new, things, in, data, sc...\n",
+      "4    [this, is, an, example, document,, it, may, ha...\n",
+      "Name: Documents, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus = df['Documents'].apply(lambda x: x.lower().split())\n",
+    "print(corpus)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 3: Create a vocabulary of unique words from the corpus by turning it into a \"set\" and flatten the list of lists into a single list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocabulary = set(word for document in corpus for word in document)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since it's a set we can't use slicing. Instead let's print out the first 5 elements.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- A few random vocabulary words ---\n",
+      "a\n",
+      "subset\n",
+      "in\n",
+      "@\n",
+      "learning\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"--- A few random vocabulary words ---\")\n",
+    "for i, val in enumerate(itertools.islice(vocabulary, 5)):\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's also check the total length to get the vocabulary size.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total vocabulary size is 33 unqiue words/tokens\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The total vocabulary size is {} unqiue words/tokens\".format(len(vocabulary)))"
    ]
   },
   {
@@ -47,7 +238,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### One Hot Encoding (OHE)"
+    "### One Hot Encoding (OHE)\n",
+    "<ins>One Hot Encoding</ins>: converts each word of a document into a 2-dimensional vector where the first dimension is the number of words in the document and the second value indicate the vocabulary size (V=5 in our case).\n",
+    "\n",
+    "Using the same example data set as before, let's create a list of all unique words to use as features for one-hot encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the set into list\n",
+    "vocabulary_list = list(vocabulary)\n",
+    "\n",
+    "# Create a DataFrame to hold the one-hot encoded representation\n",
+    "one_hot_encoded_df = pd.DataFrame(0, index=range(len(df)), columns=vocabulary_list)"
    ]
   },
   {
@@ -97,8 +304,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
