--- a/notes/vectorizing_notes.ipynb
+++ b/notes/vectorizing_notes.ipynb
@@ -5,6 +5,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Table of Contents\n",
+    "1. [General Vocabulary](#general-vocabulary)\n",
+    "2. [Feature Engineering](#feature-engineering)\n",
+    "    1. [One Hot Encoding](#one-hot-encoding)\n",
+    "    2. [Bag of Words](#bag-of-words-bow)\n",
+    "    3. [NGrams](#ngrams)\n",
+    "    4. [TF-IDF](#tf-idf)\n",
+    "    5. [Word Embeddings](#word-embeddings)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## General Vocabulary\n",
     "\n",
     "* <ins>Corpus</ins>: All words in a dataset\n",
@@ -228,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Engineering <a class=\"anchor\" id=\"feature_engineering\"></a>\n",
+    "## Feature Engineering\n",
     "\n",
     "Feature Engineering, also known as \"feature extraction\", \"text representation\", or \"text vectorization\" is an integral step that allows us to represent text as numbers (feature vectors). This is required when working on NLP problem as computers can only understand numbers, not text in its raw form. Various approaches are covered below."
    ]
@@ -238,23 +253,432 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### One Hot Encoding (OHE)\n",
-    "<ins>One Hot Encoding</ins>: converts each word of a document into a 2-dimensional vector where the first dimension is the number of words in the document and the second value indicate the vocabulary size (V=5 in our case).\n",
+    "### One Hot Encoding\n",
+    "<ins>One Hot Encoding (OHE)</ins>: is used with categorical and natural language datasets to convert their values into 2-dimensional vector representations. Specifically, it functions by representing each category in a feature as a binary vector of 1s and 0s, with the vector's size equivalent to the number of potential categories (i.e. Vocabulary size in the case of natural language)\n",
     "\n",
     "Using the same example data set as before, let's create a list of all unique words to use as features for one-hot encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>subset</th>\n",
+       "      <th>in</th>\n",
+       "      <th>@</th>\n",
+       "      <th>learning</th>\n",
+       "      <th>it</th>\n",
+       "      <th>i</th>\n",
+       "      <th>and</th>\n",
+       "      <th>fascinating</th>\n",
+       "      <th>love</th>\n",
+       "      <th>...</th>\n",
+       "      <th>is</th>\n",
+       "      <th>like</th>\n",
+       "      <th>this</th>\n",
+       "      <th>science</th>\n",
+       "      <th>%)</th>\n",
+       "      <th>an</th>\n",
+       "      <th>document,</th>\n",
+       "      <th>have</th>\n",
+       "      <th>of</th>\n",
+       "      <th>(!</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  subset  in  @  learning  it  i  and  fascinating  love  ...  is  like  \\\n",
+       "0  0       0   0  0         0   0  0    0            0     0  ...   0     0   \n",
+       "1  0       0   0  0         0   0  0    0            0     0  ...   0     0   \n",
+       "2  0       0   0  0         0   0  0    0            0     0  ...   0     0   \n",
+       "3  0       0   0  0         0   0  0    0            0     0  ...   0     0   \n",
+       "4  0       0   0  0         0   0  0    0            0     0  ...   0     0   \n",
+       "\n",
+       "   this  science  %)  an  document,  have  of  (!  \n",
+       "0     0        0   0   0          0     0   0   0  \n",
+       "1     0        0   0   0          0     0   0   0  \n",
+       "2     0        0   0   0          0     0   0   0  \n",
+       "3     0        0   0   0          0     0   0   0  \n",
+       "4     0        0   0   0          0     0   0   0  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the set into list\n",
     "vocabulary_list = list(vocabulary)\n",
     "\n",
     "# Create a DataFrame to hold the one-hot encoded representation\n",
-    "one_hot_encoded_df = pd.DataFrame(0, index=range(len(df)), columns=vocabulary_list)"
+    "one_hot_encoded_df = pd.DataFrame(0, index=range(len(df)), columns=vocabulary_list)\n",
+    "one_hot_encoded_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One-Hot Encoded DataFrame:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>subset</th>\n",
+       "      <th>in</th>\n",
+       "      <th>@</th>\n",
+       "      <th>learning</th>\n",
+       "      <th>it</th>\n",
+       "      <th>i</th>\n",
+       "      <th>and</th>\n",
+       "      <th>fascinating</th>\n",
+       "      <th>love</th>\n",
+       "      <th>...</th>\n",
+       "      <th>is</th>\n",
+       "      <th>like</th>\n",
+       "      <th>this</th>\n",
+       "      <th>science</th>\n",
+       "      <th>%)</th>\n",
+       "      <th>an</th>\n",
+       "      <th>document,</th>\n",
+       "      <th>have</th>\n",
+       "      <th>of</th>\n",
+       "      <th>(!</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 33 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  subset  in  @  learning  it  i  and  fascinating  love  ...  is  like  \\\n",
+       "0  0       0   0  0         1   0  1    1            0     1  ...   0     0   \n",
+       "1  0       0   0  0         0   0  0    1            1     0  ...   1     0   \n",
+       "2  1       1   0  0         1   0  0    0            0     0  ...   1     0   \n",
+       "3  0       0   1  0         1   0  1    0            0     0  ...   0     0   \n",
+       "4  1       0   0  1         0   1  0    0            0     0  ...   1     1   \n",
+       "\n",
+       "   this  science  %)  an  document,  have  of  (!  \n",
+       "0     0        1   0   0          0     0   0   0  \n",
+       "1     0        1   0   0          0     0   0   0  \n",
+       "2     0        1   0   0          0     0   1   0  \n",
+       "3     0        1   0   0          0     0   0   0  \n",
+       "4     1        0   1   1          1     1   1   1  \n",
+       "\n",
+       "[5 rows x 33 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Iterate over each document and set the corresponding word column to 1\n",
+    "for idx, document in enumerate(corpus):\n",
+    "    for word in document:\n",
+    "        one_hot_encoded_df.at[idx, word] = 1\n",
+    "\n",
+    "print(\"One-Hot Encoded DataFrame:\")\n",
+    "one_hot_encoded_df.head()"
    ]
   },
   {
@@ -270,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NGrams <a name=\"ngrams\"></a>"
+    "### NGrams"
    ]
   },
   {
@@ -278,7 +702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TF-IDF <a name=\"tfidf\"></a>"
+    "### TF-IDF"
    ]
   },
   {
@@ -286,7 +710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Word Embeddings <a name=\"word_embeddings\"></a>"
+    "### Word Embeddings"
    ]
   },
   {
