added JSON and GCS data load options

--- a/reusable_templates/predictive_analytics/prediction.ipynb
+++ b/reusable_templates/predictive_analytics/prediction.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Loading a CSV/Excel"
+    "#### Loading a CSV"
    ]
   },
   {
@@ -153,6 +153,27 @@
    "outputs": [],
    "source": [
     "# df = pandas.read_excel('<Insert Excel File Name>.xlsx',sheet_name = '<Insert tab name>')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load a JSON"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "file_path = \"/home/jupyter/data/news/news_some_company.json\"\n",
+    "df = pd.read_json(file_path, orient='records', lines=True)\n",
+    "df.head()\n",
+    "\"\"\""
    ]
   },
   {
@@ -185,6 +206,48 @@
     "\n",
     "# Mount Google Drive\n",
     "drive.mount('/content/drive')\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Copy files to local FS from GCS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "# GCS download function\n",
+    "def get_gcs_data(bucket_name, folder_name, file_name, path_local):\n",
+    "    url = 'https://storage.googleapis.com/' + bucket_name + '/' + folder_name + '/' + file_name\n",
+    "    r = requests.get(url)\n",
+    "    open(path_local + '/' + file_name , 'wb').write(r.content)\n",
+    "\n",
+    "# Receiving path\n",
+    "path_news = '/home/jupyter/data/news'\n",
+    "os.makedirs(path_news, exist_ok=True)\n",
+    "    \n",
+    "# GCS bucket details\n",
+    "bucket_name = 'msca-bdp-data-open'\n",
+    "folder_name = 'news'\n",
+    "file_name = ['news_some_company.json']\n",
+    "path_local = path_news\n",
+    "\n",
+    "os.makedirs(path_local, exist_ok=True)\n",
+    "\n",
+    "for file in file_name:\n",
+    "    get_gcs_data (bucket_name = bucket_name,\n",
+    "                 folder_name = folder_name,\n",
+    "                 file_name = file,\n",
+    "                 path_local = path_local)\n",
+    "    print('Downloaded: ' + file)\n",
     "\"\"\""
    ]
   },
