added linux and gcp billing

--- a/cloud/gcp/gcp_billing.ipynb
+++ b/cloud/gcp/gcp_billing.ipynb
@@ -46,7 +46,30 @@
     "* Roles can be assigned at different layers. Roles assigned at organization layer are inherited by all attached billing accounts\n",
     "* Best practices\n",
     "    * Follow the principle of least privilege and assign only the necessary permissions to perform the role\n",
-    "    * Assign multiple billing account admins to ensure operation BCP (if one admin is unavailable, another can manage)"
+    "    * Assign multiple billing account admins to ensure operation BCP (if one admin is unavailable, another can manage)\n",
+    "\n",
+    "\n",
+    "## Cost Visibility & Analysis\n",
+    "\n",
+    "### GCP Billing Reports\n",
+    "* Provides visibility into cloud costs\n",
+    "\n",
+    "### Export Billing Data to BigQuery\n",
+    "* Able to get a more fine-grained view into billing data in BigQuery\n",
+    "* You need the Billing Account Administrator role to configure a billing export to BigQuery\n",
+    "* Will only include data from after the export was setup \n",
+    "\n",
+    "### Billing Alerts\n",
+    "* Can be setup in the Billing service to automatically alert you\n",
+    "\n",
+    "### Tools to Reduce Costs\n",
+    "* Rightsizing VMs - automatically generated recommendations to increase/decrease VMs \n",
+    "* Sustained Use Discounts - automatic feature that gives you discounts\n",
+    "* Committed Use Discounts - billed monthly for 1-3 years of committment. Billed based on compute, not specific machines\n",
+    "* Preemptible VMs - save up to 80%. Max life of 24 hours. Good for fault tolerant, batch compute jobs\n",
+    "* Cloud Storage Classes - Standard, Nearline, Coldline, Archive\n",
+    "* Cloud Storage Lifecycle Policies - Automatically delete/change class of old data\n",
+    "* Free Tier Resources - low usage of many GCP services is always free. "
    ]
   },
   {
