added GKE and Linux notes

--- a/linux/linux_notes.ipynb
+++ b/linux/linux_notes.ipynb
@@ -33,6 +33,13 @@
     "Distributions\n",
     "* Different Linux versions packaged by separate orgs or companies. \n",
     "* They all share the same core kernel but the other two layers can be different\n",
+    "* Common distros\n",
+    "    * Red Hat\n",
+    "        * CentOS\n",
+    "        * Red Hat Enterprise (RHEL)\n",
+    "        * Fedora\n",
+    "    * Ubuntu, based on Debian\n",
+    "    * OpenSUSE, based on the the SUSE project\n",
     "\n",
     "Reliability\n",
     "* Linux is known for being very reliable with high uptimes\n",
