updated linux notes

--- a/data_processing_scripts/dtsx_to_xlsx_w_python.ipynb
+++ b/data_processing_scripts/dtsx_to_xlsx_w_python.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,15 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📂 Processing: /Users/attis/VS_Code_Repos/ds_notes-1/test_data/Lesson 1.dtsx → /Users/attis/VS_Code_Repos/ds_notes-1/test_data/Lesson 1.xlsx\n",
-      "✅ Successfully saved: /Users/attis/VS_Code_Repos/ds_notes-1/test_data/Lesson 1.xlsx\n"
+      "📂 Processing: /Users/attis/VS_Code_Repos/ds_notes-1/test_data/Lesson 1.dtsx → /Users/attis/VS_Code_Repos/ds_notes-1/test_data/Lesson 1.xlsx\n"
      ]
     }
    ],
