--- a/linux/linux_notes.ipynb
+++ b/linux/linux_notes.ipynb
@@ -52,9 +52,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Different versions of modern Linux\n",
+    "## Server Linux\n",
+    "\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
