--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -66,7 +66,9 @@
     "\n",
     "### Benchmark Datasets (MMLU, BigBench, HumanEval)\n",
     "\n",
-    "### Bias Detection\n"
+    "### Bias Detection\n",
+    "\n",
+    "### LLM-as-a-judge\n"
    ]
   },
   {
@@ -108,6 +110,24 @@
     "### Jailbreak Prevention\n",
     "\n",
     "### Data Privacy\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Retrieval Augmented Generation (RAG)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Agents"
    ]
   },
   {
