xml processing updates

--- a/data_processing_scripts/xml_processing/xml_to_xlsx_w_python.ipynb
+++ b/data_processing_scripts/xml_processing/xml_to_xlsx_w_python.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,20 +64,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully converted /Users/attis/VS_Code_Repos/ds_notes-1/data_processing_scripts/books.xml to /Users/attis/VS_Code_Repos/ds_notes-1/data_processing_scripts/books.xlsx\n",
-      "Successfully converted /Users/attis/VS_Code_Repos/ds_notes-1/data_processing_scripts/books copy.xml to /Users/attis/VS_Code_Repos/ds_notes-1/data_processing_scripts/books copy.xlsx\n"
+      "Successfully converted /Users/attis/VS_Code_Repos/ds_notes-1/test_data/books.xml to /Users/attis/VS_Code_Repos/ds_notes-1/test_data/books.xlsx\n"
      ]
     }
    ],
    "source": [
-    "process_directory(\"/Users/attis/VS_Code_Repos/ds_notes-1/data_processing_scripts\")"
+    "process_directory(\"/Users/attis/VS_Code_Repos/ds_notes-1/test_data/\")"
    ]
   },
   {
