--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -133,6 +133,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "--- \n",
+    "\n",
+    "## Product Sense - Good vs. Bad LLM Use Cases\n",
+    "\n",
+    "### Good LLM Use Cases\n",
+    "\n",
+    "### Bad LLM Use Cases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
