Added DevOps cert notes and updates to Linux notes

--- a/linux/linux_notes.ipynb
+++ b/linux/linux_notes.ipynb
@@ -52,11 +52,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Server Linux\n",
+    "---\n",
+    "## Types of Linux\n",
+    "\n",
+    "### Server Linux\n",
+    "* Less software installed so resources are used more efficiently\n",
+    "    * This in turn is safer as it means there are less bugs, insecurities, and complexity.\n",
+    "* No GUI and related overhead required\n",
+    "* Dedicated servers are designed for throughput, reliability, heavy workloads, high traffic, and tuned for server-style tasks.\n",
+    "* Types of linux servers:\n",
+    "    * Databases\n",
+    "    * Web servers\n",
+    "    * Email servers\n",
+    "    * Application servers\n",
+    "* Linux runs well on off the shelf computers\n",
+    "\n",
+    "### Desktop Linux\n",
+    "\n",
+    "### Mobile Linux\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
