--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -56,19 +56,27 @@
     "---\n",
     "## 𝗟𝗟𝗠 𝗘𝘃𝗮𝗹𝘂𝗮𝘁𝗶𝗼𝗻\n",
     "\n",
-    "### Perplexity\n",
+    "### Metrics \n",
+    "1. Precision@K\n",
+    "2. Apology Rate\n",
+    "3. No Response Rate\n",
+    "4. Perplexity\n",
+    "5. ROUGE Scores\n",
+    "6. BLEU Scores\n",
+    "7. Intelligence\n",
+    "8. Relevance\n",
     "\n",
-    "### ROUGE Scores\n",
-    "\n",
-    "### BLEU Scores\n",
+    "### LLM-as-a-judge\n",
     "\n",
     "### Human Evaluation Methods\n",
     "\n",
-    "### Benchmark Datasets (MMLU, BigBench, HumanEval)\n",
+    "### Evaluation Data Sets\n",
+    "* Benchmark Datasets (MMLU, BigBench, HumanEval)\n",
+    "\n",
+    "### A/B Testing Between Chatbots\n",
     "\n",
     "### Bias Detection\n",
-    "\n",
-    "### LLM-as-a-judge\n"
+    "\n"
    ]
   },
   {
