Updates to linux notes

--- a/cloud/gcp/gcp_devops_cert.ipynb
+++ b/cloud/gcp/gcp_devops_cert.ipynb
@@ -10,6 +10,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Being a good DevOps Engineers is understanding BOPT\n",
+    "* <ins>BOPT</ins>: Business, Organization, Process/Techniques, Technology/Tools. \n",
+    "    * Business - External forces and revenue creation\n",
+    "    * Organization - Internal forces and structure\n",
+    "    * Process/Techniques - Human considerations\n",
+    "    * Technology/Tools - Cloud services and the nuts and bolts of doing the job"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
