--- a/linux/linux_notes.ipynb
+++ b/linux/linux_notes.ipynb
@@ -53,6 +53,7 @@
    "metadata": {},
    "source": [
     "---\n",
+    "\n",
     "## Types of Linux\n",
     "\n",
     "### Server Linux\n",
@@ -68,8 +69,48 @@
     "* Linux runs well on off the shelf computers\n",
     "\n",
     "### Desktop Linux\n",
+    "* Desktop Linux has a GUI\n",
+    "* Fedora and Ubuntu both have popular desktop distros\n",
+    "* The default desktop for many distributions is called \"GNOME\"\n",
     "\n",
     "### Mobile Linux\n",
+    "* Touch screen interface\n",
+    "* Mobile distros:\n",
+    "    * The Android Open Source Project (AOSP) is the main distro. It's licensed under Apache.\n",
+    "    * Ubuntu Touch\n",
+    "    * postmarketOS\n",
+    "    * Sailfish OS\n",
+    "    * Mobian (a mobile version of Debian)\n",
+    "* Mobile linux can be difficult to install and lead to bricked phones\n",
+    "\n",
+    "### Hypervisor or Virtual\n",
+    "* Involves using virtualization to run one or more copies of linux inside another OS\n",
+    "* It shares resources with the \"host\"\n",
+    "    * The VM \"host\" controls resources and assigns them to VM clients as needed\n",
+    "    * Allows the efficient use of large servers that otherwise would go underutilized\n",
+    "* Types of Virtualization\n",
+    "    * Type 1 - A physical computer runs a \"hypervisor\" that talks directly to the computer's hardware, usually dedicated to running VMs. Amazon EC2 is an example\n",
+    "        * Allows you to build and run huge numbers of VMs at once (i.e. corporate data center, cloud provider, etc.)\n",
+    "    * Type 2 - Hosted hypervisor. Software on a normal OS allows you to run a VM on a normal computer like your laptop\n",
+    "        * Can only run a few VMs\n",
+    "\n",
+    "### Different Architectures\n",
+    "* There are different Linux versions for different CPU types\n",
+    "* The most common is the x86 64-bit CPU from AMD and Intel (also goes by the names \"X64\" and \"amd64\")\n",
+    "* Other examples of CPU designs\n",
+    "    * Apple took the ARM64 and created their M1 CPUs\n",
+    "    * The ARM64 architecture shows up as aarch64 in Linux\n",
+    "    * Risc\n",
+    "    * PowerPC\n",
+    "* Linux is used in most IT infrastructure\n",
+    "    * Network routers and gateways\n",
+    "    * Network switches\n",
+    "    * Firewalls\n",
+    "    * Smart TVs\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -80,7 +121,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "## Using Linux\n",
+    "\n",
+    "### SSH\n",
+    "* <ins>SSH</ins>: a secure protocol to connect to servers that has 3 layers\n",
+    "    * <ins>Transport layer</ins>: ensure you're using an encrypted and secure connection. It also caches and compresses data\n",
+    "    * <ins>Authentication layer</ins>: ensure you are who you say you are using keys and passwords\n",
+    "    * <ins>Connection layer</ins>: maintains and manages the connection once authenticated\n",
+    "* <ins>ssh</ins>: a text-based program that supports the above protocol\n",
+    "    * Can also be used to transfer data via the \"scp\" command\n",
+    "    * Uses a shared key system (public/private key) to connect\n",
+    "* Command Line Interface (CLI): used the configure and manage Linux systems\n",
+    "* <ins>shell</ins>: a command interpreter in Linux and is run when you log into the server\n",
+    "\n",
+    "### Installing and updating software in Linux\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
