--- a/natural_language_processing/llm/llm_interview_prep.ipynb
+++ b/natural_language_processing/llm/llm_interview_prep.ipynb
@@ -25,7 +25,29 @@
     "\n",
     "### Model Scaling Laws\n",
     "\n",
-    "### Parameter Efficient Fine-tuning (LoRA, QLoRA, Prefix Tuning)\n"
+    "### Parameter Efficient Fine-tuning (LoRA, QLoRA, Prefix Tuning)\n",
+    "\n",
+    "### Distillation\n",
+    "\n",
+    "What is knowledge distillation?\n",
+    "\n",
+    "When did knowledge distillation appear as a technique?\n",
+    "* The ideas behind knowledge distillation (KD) date back to 2006, when Bucilă, Caruana, and Niculescu-Mizil in their work “Model Compression” showed that an ensemble of models could be compressed into a single smaller model without much loss in accuracy. They demonstrated that a cumbersome model (like an ensemble) could be effectively replaced by a lean model that was easier to deploy.\n",
+    "* Later in 2015, Geoffrey Hinton, Oriol Vinyals, and Jeff Dean coined the term “distillation” in their “Distilling the Knowledge in a Neural Network” paper. This term was referred to the process of transferring knowledge from a large, complex AI model or ensemble to a smaller, faster AI model, called the distilled model​. \n",
+    "    * Instead of just training the smaller model on correct answers, researchers proposed to give it the probability distribution from the large model. \n",
+    "    * This helps the smaller model learn not just what the right answer is, but also how confident the big model is about each option. This training concept is closely connected to the softmax function.\n",
+    "\n",
+    "Types of knowledge distillation\n",
+    "\n",
+    "Improved algorithms\n",
+    "\n",
+    "Distillation scaling laws\n",
+    "\n",
+    "Benefits\n",
+    "\n",
+    "Not without limitations\n",
+    "\n",
+    "Real-world effective use cases (why OpenAI got mad at DeepSeek)"
    ]
   },
   {
